fix sonar issues in PropertyServiceTest